tests/rosetta/transpiler/C/bitmap-write-a-ppm-file.error
compile failed: exit status 1: /tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c: In function ‘_mem’:
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:74:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   74 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c: At top level:
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:84:11: error: expected identifier or ‘(’ before ‘[’ token
   84 |     Colour[] *pixels;
      |           ^
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c: In function ‘newBitmap’:
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:113:51: warning: passing argument 1 of ‘list_append_int_new’ from incompatible pointer type [-Wincompatible-pointer-types]
  113 |                         row = list_append_int_new(row, row_len, c);
      |                                                   ^~~
      |                                                   |
      |                                                   Colour *
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:24:44: note: expected ‘const int *’ but argument is of type ‘Colour *’
   24 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                 ~~~~~~~~~~~^~~
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:113:65: error: incompatible type for argument 3 of ‘list_append_int_new’
  113 |                         row = list_append_int_new(row, row_len, c);
      |                                                                 ^
      |                                                                 |
      |                                                                 Colour
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:24:65: note: expected ‘int’ but argument is of type ‘Colour’
   24 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                                             ~~~~^~~
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:116:35: warning: passing argument 1 of ‘list_append_strptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  116 |         rows = list_append_strptr(rows, &rows_len, row);
      |                                   ^~~~
      |                                   |
      |                                   Colour **
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:38:55: note: expected ‘const char ***’ but argument is of type ‘Colour **’
   38 | static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
      |                                         ~~~~~~~~~~~~~~^~~
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:116:52: warning: passing argument 3 of ‘list_append_strptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  116 |         rows = list_append_strptr(rows, &rows_len, row);
      |                                                    ^~~
      |                                                    |
      |                                                    Colour *
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:38:86: note: expected ‘const char **’ but argument is of type ‘Colour *’
   38 | static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
      |                                                                         ~~~~~~~~~~~~~^~~
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:116:14: warning: assignment to ‘Colour **’ from incompatible pointer type ‘const char ***’ [-Wincompatible-pointer-types]
  116 |         rows = list_append_strptr(rows, &rows_len, row);
      |              ^
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:120:47: error: ‘Bitmap’ has no member named ‘pixels’; did you mean ‘pixels_len’?
  120 |     return (Bitmap){.width = w, .height = h, .pixels = rows, .pixels_len = rows_len};
      |                                               ^~~~~~
      |                                               pixels_len
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:120:56: warning: initialization of ‘long unsigned int’ from ‘Colour **’ makes integer from pointer without a cast [-Wint-conversion]
  120 |     return (Bitmap){.width = w, .height = h, .pixels = rows, .pixels_len = rows_len};
      |                                                        ^~~~
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:120:56: note: (near initialization for ‘(anonymous).pixels_len’)
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c: In function ‘setPixel’:
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:124:23: error: ‘Bitmap’ has no member named ‘pixels’; did you mean ‘pixels_len’?
  124 |     Colour **rows = b.pixels;
      |                       ^~~~~~
      |                       pixels_len
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:126:27: error: ‘Bitmap’ has no member named ‘pixels_lens’; did you mean ‘pixels_len’?
  126 |     size_t *rows_lens = b.pixels_lens;
      |                           ^~~~~~~~~~~
      |                           pixels_len
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:132:7: error: ‘Bitmap’ has no member named ‘pixels’; did you mean ‘pixels_len’?
  132 |     b.pixels = rows;
      |       ^~~~~~
      |       pixels_len
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c: In function ‘writePPMP3’:
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:161:26: error: ‘Bitmap’ has no member named ‘pixels’; did you mean ‘pixels_len’?
  161 |             Colour p = b.pixels[(int)(y)][(int)(x)];
      |                          ^~~~~~
      |                          pixels_len
/tmp/ctranspile3926809934/bitmap-write-a-ppm-file.mochi.c:182:26: error: ‘Bitmap’ has no member named ‘pixels’; did you mean ‘pixels_len’?
  182 |             Colour p = b.pixels[(int)(y)][(int)(x)];
      |                          ^~~~~~
      |                          pixels_len

